--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <base href="./">
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chess AI Arena</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.twind.style" crossorigin></script>
   <script type="importmap">
 {
   "imports": {
